test/bad/generics/print01.px

func f<T>(x: T): Void def
    print x

f(write)
